# cmsis-collection

./: .cproject  .gitignore  .project  Makefile  Makefile.inc  Makefile.inc1  Makefile.inc2  README.md  cmsis-common.cmake  module.inc
efm32/: .gitignore  Makefile  Makefile.lib  README.md  module.mak
lm3s/: .gitignore  Makefile  Makefile.lib  module.mak
lpc11cxx/: Makefile  Makefile.lib  README.md  cmsis.mak  lpcopen.patch  module.mak
lpc13xx/: Makefile  Makefile.lib  README.md  cmsis.mak  module.mak  system.patch
lpc8xx/: Makefile  Makefile.lib  README.md  module.mak
msp432-driverlib/: Makefile  Makefile.lib  README.md  module.mak
nrf5-sdk/: Makefile  Makefile.lib  README.md  module.mak
stm32f10x/: .gitignore  Makefile  Makefile.lib  README.md  cmsis.mak  core_cm3.patch  module.mak
stm32f2xx/: .gitignore  CMakeLists.txt  Makefile  Makefile.lib  README.md  module.mak
stm32f4xx/: CMakeLists.txt  Makefile  Makefile.lib  README.md  module.mak
stm32l1xx/: Makefile  Makefile.lib  README.md  cmsis.mak
tiva/: .gitignore  Makefile  Makefile.lib  README.md  module.mak
